<resources>
    <string name="app_name">FakeStore</string>
    <string name="add_to_cart">Add</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_profile">Profile</string>
    <string name="nav_label_favorite">Favorite</string>
    <string name="nav_label_home">Home</string>
    <string name="nav_label_cart">Cart</string>
    <string name="nav_label_profile">Profile</string>
    <string name="go_to_the_catalog"><u>Go shopping</u></string>
    <string name="there_are_no_products_yet">There are no products yet</string>

<!--    todo make plural forms-->
    <string name="count_of_reviews">%1$d reviews</string>

    <string name="nav_label_details" />
    <string name="btn_add_to_cart">Buy</string>
    <string name="sort">Sort</string>
    <string name="most_popular">Most popular</string>
    <string name="cheapest">cheapest</string>
    <string name="most_expensive">most expensive</string>
    <string name="cost">Cost</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="category">Category</string>
    <string name="products">Catalog</string>
    <string name="filter_icon">filter icon</string>
    <string name="btn_buy_text_not_added">Add to cart</string>
    <string name="btn_buy_text_added">Added</string>
    <string name="you_might_also_like">You might also like</string>
    <string name="filters">Filters</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>

</resources>
