<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/filters_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    app:behavior_peekHeight="56dp"
    android:background="@color/dark_blue"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/tv_title_sort"
        style="@style/TextView_H2"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:text="@string/sort"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:layout_marginVertical="10dp"
        android:id="@+id/toggle_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_sort"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_most_popular"
            android:textColor="@color/white"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/most_popular"
            android:textSize="10sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cheapest"
            android:textColor="@color/white"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheapest"
            android:textSize="10sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_most_expensive"
            android:textColor="@color/white"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/most_expensive"
            android:textSize="10sp" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/tv_title_cost"
        style="@style/TextView_H2"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:text="@string/cost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggle_group" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginVertical="10dp"
        android:id="@+id/til_from"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:hint="@string/from"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:layout_constraintEnd_toStartOf="@id/til_to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_cost">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_to"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:hint="@string/to"
        app:layout_constraintBaseline_toBaselineOf="@id/til_from"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/til_from">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_to"
            style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/range_slider_cost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_from"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        app:values="@array/cost_initial_slider_values"
        android:valueFrom="0"
        app:thumbColor="@color/orange"
        app:trackColorActive="@color/orange"
        app:trackColorInactive="@color/white"
        android:valueTo="50"/>

    <TextView
        android:id="@+id/tv_title_category_list"
        style="@style/TextView_H2"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:text="@string/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/range_slider_cost" />


</androidx.constraintlayout.widget.ConstraintLayout>
